--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,7 @@ build/
 .vscode/
 
 ### ###
+src/main/resources/templates
 src/main/resources/application.properties
 src/main/resources/application-oauth2.properties
 src/main/resources*/*.properties
