유저, 프로필, 트렌딩 완성

--- a/.gitignore
+++ b/.gitignore
@@ -33,14 +33,12 @@ build/
 .vscode/
 
 ### ###
-<<<<<<< HEAD
-=======
 #src/main/resources/templates
->>>>>>> 8645c087f49a714d10b09f24e385c89a5b3d99d2
 src/main/resources/application.properties
 src/main/resources*/*.properties
 src/main/resources/static/custom.js
 src/main/resources/templaces/index.mustache
+src/main/resources/*.sql
 .properties
 /.mvn/
 src/main/resources/*.json
