--- a/pom.xml
+++ b/pom.xml
@@ -11,10 +11,11 @@
 	<groupId>com.team4</groupId>
 	<artifactId>sns</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<packaging>war</packaging>
 	<name>sns</name>
 	<description>Codepresso Team4 SNS Project</description>
 	<properties>
-		<java.version>17</java.version>
+		<java.version>1.8</java.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -81,6 +82,7 @@
 	</dependencies>
 
 	<build>
+		<finalName>ROOT</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
